# auto-release-note-generation

./: .gitignore  .pip-audit-exclusions.yaml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  LICENSE  README.md  SECURITY_FIXES.md  pyproject.toml
.github/: dependabot.yml
.github/actions/build-package/: action.yml
.github/actions/code-quality/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/security-scan/: action.yml
.github/actions/setup-python-env/: action.yml
.github/scripts/: get_coverage_percentage.py  parse_benchmarks.py  parse_pip_audit_exclusions.py  process_coverage.py
.github/workflows/: ci-refactored.yml  ci.yml  developer-tools.yml  main-branch.yml  nightly.yml  pr-checks.yml  pr-fast.yml  release.yml  reusable-build.yml  reusable-quality.yml  reusable-security.yml  reusable-tests.yml  security-audit.yml
docs/: DEVELOPER_QUICKSTART.md  dev_plan.md  system_design.md  test-strategy-refactoring.md  testing-patterns.md
notebooks/: build_commit_object.ipynb  commit_objects_export.json  sandbox.py
src/auto_release_note_generation/: __init__.py
src/auto_release_note_generation/data_models/: __init__.py  commit.py  shared.py  utils.py
tests/data_models/: conftest.py  test_change_metadata.py  test_data.py  test_factories.py  test_file_diff.py  test_git_actor.py  test_git_metadata.py  test_shared.py  test_strategies.py  test_utils.py
tests/data_models/strategies/: README.md  __init__.py  actors.py  base.py  commits.py  files.py  metadata.py  utils.py
